--- a/2022-02-10-figuring-out-what-to-do.org
+++ b/2022-02-10-figuring-out-what-to-do.org
@@ -17,8 +17,219 @@ tags: [meaning]
 #+TODO: RAW INIT TODO ACTIVE | MAYBE DONE CLOSED
 
 * Intro
+
+All right, so recently I've been trying to figure out very hard what
+I'm gonna do with my life.  It's like, you know, I wanna do something
+that I enjoy, that feels meaningful and fulfilling and brings me
+happiness and that helps people and trying to find my passion.  But at
+the same time, I'm thinking, "Well, I don't really know what my
+passion is.  I don't know if this is the thing that I wanna do for the
+next 20 years.  I don't know to what extent medicine plays a role in
+this overall life plan."  And so to try and untangle all this stuff,
+there are three exercises that I've been finding really useful that I
+wanna share with you in this video.  And let's get started with number
+one, The Gravestone Technique.
 * The Gravestone Technique
+
+All right, so the Gravestone Technique is a little bit morbid but the
+idea is that we wanna think about what do we want written on our
+gravestone?  And so I thought about this quite a lot.  And for me,
+sort of three things came to mind if I imagine my future gravestone
+what I'd want to be written on it.  Number one, a good dad, or words
+to that effect.  Number two, good husband, or words to that effect.
+And number three was the one that most surprised me, which was
+something along the lines of inspirational teacher.  And that phrase
+came to me, this inspirational teacher thing and it kind of made me
+realize that a lot of the things I found most meaningful throughout my
+life have been when I've been teaching.  So whether it's teaching
+students when I was in school or teaching medical students at
+university, or even this YouTube channel, it's basically teaching at
+scale.  I realized that, "Oh, wow that is a big part of what I find
+meaningful and fulfilling.  And so being a teacher should maybe make
+up some aspect of my life plan."  So that's one way of using the
+Gravestone Technique.  The other way is to imagine what different
+people might say at your funeral and what you want them to say at your
+funeral.  So for example, close friends, close family members, work
+colleagues or random people on the street or random people on the
+internet.  And the idea behind that is that it gives us a different
+way of trying to figure out what is the sort of person I want to be to
+different people.  If we imagine what our friends would say at our
+funeral, it will probably be based around our character and about how
+nice and warm and friendly we were and how accommodating we were and
+how much of a good friend or family member we were.  It wouldn't
+really be about our achievements or accolades and especially as high
+achievers, like often, we can very easily fall into the trap of
+optimizing far too much for career and achievements and not enough on
+relationships and just being a generally nice person.  This is
+something that I struggle with a lot that I'm trying to remedy over
+time.  And the third aspect of the Gravestone Technique, is what do
+you want to have been written on your Wikipedia page by the time you
+die?  And the Wikipedia page question is more about achievements and
+accolades and what's the impact you wanna have on the world overall,
+rather than just kind of the impact you wanna have on your close
+friends and family members.  And so in a way these three different
+exercises, I've been finding quite helpful because I just never, ever,
+ever do any long-term planning until I started thinking about these.
+And I guess when it comes to finding stuff that's meaningful and
+fulfilling, that seems to vary a lot depending on who we are and our
+own kind of internal compass for what, what is meaningful.  I think
+when we think that long-term, like okay, 60 years from now, when I'm
+dead, what do I want my life to have looked like?  I think that's
+particularly interesting.  And there's a great book called "How Will
+You Measure Your Life?" by Clayton Christensen that I read a few
+months ago that really turned me on to this mode of long-term
+thinking, because otherwise if you're a busy person and you're doing a
+lot of stuff it's just way too easy to get caught up in the rat race,
+climbing the greasy pole of subscribe accounts and career accolades
+and all that stuff.  And actually not think about what are the things
+that actually truly matter?  Method number two, for how I'm trying to
+figure out what to do with my life.
+
 * The Odyssey Plan
+
+It's called the Odyssey Plan.  Now this is from a book called
+"Designing Your Life" I don't know who it's by, but it's by these
+authors at Stanford Business School.  And I first came across this I
+think, two years ago when my friend Unjaded Jade put out a video about
+it on her YouTube channel, link in the video description, and again,
+because we all love a list of three, with the Odyssey Plan, there are
+three things that we want to be thinking about.  The first is that we
+want to ask ourselves, "what would my life look like five years from
+now if I continued down exactly the same path that I'm currently on?"
+And we want to write out, in as much detail as we can, what a day in
+our life would look like five years from now if we carry on down
+exactly the same path.  The second aspect of the Odyssey Plan is to
+ask yourself the same question.  "What would my life look like five
+years from now If I took an entirely different path?  if the current
+path that I'm on was closed off to me what's the alternative path that
+I might take, and what would my life look like?"  Then, in the third
+aspect of the Odyssey Plan, is the same question.  "What's my life
+going to look like five years from now?"  Except this time, we're
+asking ourselves "what would it look like if money and what people
+think and societal expectations, if these things didn't matter at
+all?"  So those were the three components of the Odyssey Plan.  And
+when I first discovered them from Unjaded Jade's video, part of me
+thought, "oh, I can't be bothered to do this.  It seems like too much
+effort."  But then I actually took the time to, spending half an hour
+to write out my answers to each of these, I shared some of them in my
+email newsletter, linked in the video description, if you want to
+check out my oversharing about what my life would have looked like,
+but essentially, I realized that the path that I was on like for the
+next five years, that was kind of depressing.  It felt too easy,
+almost.  The path will involve becoming a part-time resident or
+trainee in anesthetics or anesthesiology, which was the thing I was
+interested in at the time.  I was still living in Cambridge, where
+I've been for the last nine years so far.  And, you know I was doing a
+bit of teaching, a bit of writing, the YouTube channel was going well
+and it was all fine.  And it was all very reasonable and I could
+easily see how I might end up on this path but that was a big part of
+me that was just like, "oh is this really what I want to do?"  And I
+kind of felt a bit depressed thinking that this was what my life would
+amount to five years from now.  Because it just didn't seem
+challenging or interesting or uncomfortable enough and you know, as
+the folks at Yes Theory would say, I'm a big fan of seeking
+discomfort.  And because this path felt so easy, I sort of thought,
+"okay no, this is not really the path that I want to be going down."
+And so, if you're struggling to figure out what to do with your life,
+genuinely a hundred percent recommend trying out the Odyssey Plan.  I
+get that it's going to take some effort but this is like a life plan.
+And you know it's obviously going to take effort to figure it out but
+I can guarantee that if you write out this vision for what your life
+will look like five years from now, under these three conditions, you
+will get some kind of clarity about how you want to move forward.  And
+in fact, this is something that I try and repeat in my head every few
+months.  And now that I'm saying this, I'm actually going to start
+writing it out properly, every time I repeat the exercise because
+there is something magical about writing something down, rather than
+just doing it in our heads and hoping for the best.
+
 * The Ideal Ordinary Week
+
+And finally, method number three for how I'm trying to figure out what
+to do with my life.  It's called the Ideal Ordinary Week.  I came
+across this from my friend, Simon Severino, who's a business coach at
+Strategy Sprints, link below if you want to check it out.  But
+essentially, the idea is that we fast forward our life a few years
+into the future.  And I like thinking two years in the future and we
+open up our calendars and we plot out what would our ideal ordinary
+week look like on our calendar?  And it's like an ideal week because
+it's what we would like it to look like.  But it's an ordinary week.
+It's like a normal book standard week in our lives.  It's not awake
+when we're on holiday or doing something particularly novel.  And so
+again, because I'm in an oversharing mood, this is what my ideal
+ordinary week looks like two years from now.  So firstly, I'm going to
+start off by waking up every morning at eight o'clock and I'll spend
+an hour doing my wake-up and the morning routine, whatever that looks
+like.  Next, on most of the weekdays, I'm gonna do some sort of
+exercise first thing in the morning after I wake up.  So that's tennis
+or gym or squash.  On Mondays, I'm gonna have team meetings from 10
+o'clock to one o'clock.  And then on Tuesdays on Fridays, I'd be doing
+a full day in the emergency department from 10 o'clock to 6:00 p.m.
+Thursday and Sunday nights are gonna be my World of Warcraft and
+gaming great nights with my guild.  Wednesday night, is gonna be
+takeaway and board games night at my place.  And I'm going to go out
+to a restaurant to have food with friends on a Monday night and on a
+Saturday brunch time.  For most of the rest of the daytime, I'm going
+to have blocks of deep work or filming YouTube videos.  And on Monday
+and Wednesday evenings I'd be spending an hour practicing music or
+guitar or piano or singing of some sort.  And on Saturday evenings,
+I'd be attending a group evening art class or something like that.
+Then we've got a bit of time for having lunch, a bit of time for
+cooking and having dinner, a few blocks of doing absolutely nothing to
+add some margin to my calendar.  And the rest, usually in the
+evenings, will be my time for reading or learning something because
+you guys know, we're all fans of lifelong learning here on this
+channel.  I'm going to talk more about exactly how this calendar, this
+ideal ordinary week, fits into my life plan.  But before I do so, if
+you want to kickstart your journey for lifelong learning and you don't
+want to wait two years for it, I'd highly recommend signing up to
+Brilliant, who are very kindly sponsoring this video.  If you haven't
+heard, Brilliant is a fantastic platform with online courses on maths,
+science and computer science.  The courses are engaging and
+interactive and they teach us things from a very first principled
+approach, which makes it so much more interesting and useful than the
+stuff that we learn in school.  My personal favorite, is the computer
+science series on Brilliant and I've been working through those for
+the last over a year.  And the nice thing about that, is that I was
+torn between doing computer science and medicine when I applied to
+university and I ended up going to med school but it was had a part of
+me that was like, "oh I really want to understand this computer
+science stuff the algorithms, you know, the fundamentals of
+programming, languages, that sort of thing."  And so Brilliant's
+really been a fantastic introduction to all of that stuff.  If that
+sounds up your street and you're interested in lifelong learning as
+well, then head over to Brilliant.org/Ali and the first 200 people to
+go on that link you'll get 20% off the annual premium subscription.
+So thank you very much to Brilliant for sponsoring this video.  And
+now let's talk about how this Ideal Ordinary Week exercise can fit
+into our lives.  And so for me, it doesn't take very long to do.  I
+re-did this exercise this morning in about 10 minutes and really
+thought to myself, "okay what do I actually want my Ideal Ordinary
+Week to look like two years from now?"  And then the next question,
+which always comes once you've done this exercise is thinking, "Hmm,
+what is stopping me from just having this as my Ideal Ordinary Week
+now?  What are the barriers that are in the way of me achieving this
+vision of my life?"  And for me, kind of since doing this exercise,
+I've actually kind of realized that I probably could get pretty close
+to my Ideal Ordinary Week.  Yes, there's a pandemic, so I'm not gonna
+hang out with friends very often, but most of the things I actually do
+have control over my own calendar.  And so now having done the
+exercise fairly recently, I'm now thinking about my day to day
+calendar and thinking, "Hmm why is this not the vision that I actually
+want for myself?  What's stopping me from doing it?  And why can't I
+just change my calendar to reflect this right now?"  So those were
+three different techniques that I found really helpful in trying to
+figure out what the hell to do with my life.  I haven't got the answer
+but every time I do these exercises I feel I have a little bit more
+clarity about what I'm actually gonna do.  If you liked this video and
+you're interested in hearing more of my philosophical ramblings about
+meaning and fulfillment and happiness and stuff, you might like to
+check out this video over here, which is called "Why I Left Medicine
+and Why I'm Going Back" and talks about my philosophy for meaning and
+fulfillment and that sort of stuff.  So thank you so much for watching
+and I'll see you in the next video.
+
+Bye-bye.
+
 
 * Notes                                                      :noexport:notes:
